updated image conversion code